CloudFormation/yaml/00-Lab-questmedical-3.json
{
	"Resources": {
		"Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": "ami-0cd06e47208c8afd3",
				"InstanceType": "t2.small",
				"UserData": "IyEvYmluL2Jhc2gKClVOSVhfVVNFUj0iZWMyLXVzZXIiClVOSVhfVVNFUl9IT01FPSIvaG9tZS9lYzItdXNlciIKRU5WSVJPTk1FTlRfUEFUSD0iL2hvbWUvZWMyLXVzZXIvZW52aXJvbm1lbnQiClVOSVhfR1JPVVA9JChpZCAtZyAtbiAiJFVOSVhfVVNFUiIpCgojIEFwcGx5IHNlY3VyaXR5IHBhdGNoZXMKT1BFUkFUSU5HX1NZU1RFTT0kKGF3ayAtRj0gJyQxPT0iSUQiIHsgcHJpbnQgJDIgO30nIC9ldGMvb3MtcmVsZWFzZSB8IHNlZCAtZSAncy9eIi8vJyAtZSAncy8iJC8vJykKaWYgWyAiJE9QRVJBVElOR19TWVNURU0iID09ICJhbXpuIiBdOyB0aGVuCiAgICB5dW0gLXEgLXkgdXBkYXRlIC0tc2VjdXJpdHkgPiAvdG1wL2luaXQteXV [...]
				"Tags": [
					{
						"Key": "Name",
						"Value": "aws-cloud9-Automating-GxP-Compliance-in-the-Cloud-33b7fa3073da42f8a7ec59c553ab6a00"
					}
				],
				"NetworkInterfaces": [
					{
						"AssociatePublicIpAddress": true,
						"DeviceIndex": 0,
						"SubnetId": "subnet-0c3a1afb2e63ae297",
						"GroupSet": [
							{
								"Ref": "InstanceSecurityGroup"
							}
						],
						"DeleteOnTermination": true,
						"Description": "ENI for AWS Cloud9 environment aws-cloud9-Automating-GxP-Compliance-in-the-Cloud-33b7fa3073da42f8a7ec59c553ab6a00"
					}
				],
				"BlockDeviceMappings": [
					{
						"DeviceName": "/dev/xvda",
						"Ebs": {
							"VolumeType": "gp3"
						}
					}
				]
			}
		},
		"InstanceSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for AWS Cloud9 environment aws-cloud9-Automating-GxP-Compliance-in-the-Cloud-33b7fa3073da42f8a7ec59c553ab6a00",
				"VpcId": "vpc-0821486a6f4c9a96d",
				"SecurityGroupIngress": [
					{
						"FromPort": 22,
						"ToPort": 22,
						"IpProtocol": "tcp",
						"CidrIp": "35.172.155.192/27"
					},
					{
						"FromPort": 22,
						"ToPort": 22,
						"IpProtocol": "tcp",
						"CidrIp": "35.172.155.96/27"
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": "aws-cloud9-Automating-GxP-Compliance-in-the-Cloud-33b7fa3073da42f8a7ec59c553ab6a00"
					}
				]
			}
		}
	}
}
